src/test/deca/context/valid/116_classeSelection.deca
// Description:
//    Programme minimaliste: une classe pas très utile, avec une seule méthode de type A.
//
// Résultats:
//	1
//
// Historique:
//    cree le 01/01/2022

class A {
	int f(int x) {
		return x;
	}
}

{
	A a = new A();
	print(a.f(1));
}
