src/test/deca/context/invalid/46_ReturnVoid.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 13: ContextualError: returned type can't be void
// 
// Historique:
//    cree le 01/01/2022

class A {
	void f() {
		// Doit etre refuse.
		return 1;
	}
}
